Removed Mongo related code. We are now using a hard-wired in-memory db for everything.
Buckle your seatbelt Dorothy, cause Kansas is going bye bye.

--- a/analytics/src/main/resources/reference.conf
+++ b/analytics/src/main/resources/reference.conf
@@ -47,7 +47,7 @@ atmos {
     # - all
     actor-path-time-ranges = ["minutes", "hours"]
 
-    # Store time interval for adjusting the frequency of storing into Mongo.
+    # Store time interval for adjusting the frequency of storing.
     # Set to 0 for storing after every message.
     store-time-interval = 5000
     percentiles-store-time-interval = 30000
@@ -56,17 +56,8 @@ atmos {
     # Used if 'store-time-interval' is set to 0.
     store-limit = 30000
 
-    # Use random interval for each statistic (spreads the load against Mongo).
-    store-use-random-interval = true
-
     # Defines if all time should be used when calculating statistics
     store-use-all-time = false
-
-    # Defines if a cache should be used to prevent against duplicates.
-    # Using the cache will prevent incorrect stats in case of a system crash,
-    # however it also claims memory and cpu.
-    # Therefore it can be disabled to increase the overall speed of Atmos.
-    store-use-duplicates-cache = false
 
     # How long should the trace accumulator buffer before flusing.
     accumulator-flush-delay = 1 second
@@ -176,19 +167,6 @@ atmos {
     # Age when play request summaries should be purged
     max-play-request-summary-age = 20 minutes
 
-    mongo = ${atmos.mongo-defaults}
-
-    # Mongo DB settings for the "cooked" analytics data computed
-    # from the raw trace events.
-    mongo {
-      # Name of the Mongo database, preferably different than the trace db-name
-      db-name = "atmos-analytics"
-
-      # Connection URI to MongoDB
-      # URI format documetation: http://www.mongodb.org/display/DOCS/Connections
-      #db-connection-uri = ${atmos.trace.mongo.db-connection-uri}
-    }
-
     # Settings for dispatcher - can be altered for performance tuning purposes
     dispatcher {
       executor = "fork-join-executor"
@@ -216,20 +194,5 @@ atmos {
     manager = ${?ATMOS_ANALYTICS_MANAGER}
     # "poll" or "websocket" to connect to manager
     manager-mode = "poll"
-  }
-
-  trace-tree {
-    # Mongo DB settings for the "buffered" trace trees.
-    mongo {
-      # Age when a trace tree should be purged
-      trace-tree-max-age = 60 seconds
-
-      # Name of the Mongo database, preferably different than the trace db-name
-      db-name = "atmos-trace-trees"
-
-      # Connection URI to MongoDB
-      # URI format documetation: http://www.mongodb.org/display/DOCS/Connections
-      #db-connection-uri = ${atmos.trace.mongo.db-connection-uri}
-    }
   }
 }
