Added runner class + dependent resources (HTML, JS, CSS)

--- a/analytics/src/main/resources/reference.conf
+++ b/analytics/src/main/resources/reference.conf
@@ -194,5 +194,39 @@ atmos {
     manager = ${?ATMOS_ANALYTICS_MANAGER}
     # "poll" or "websocket" to connect to manager
     manager-mode = "poll"
+
+
+    # Use pretty printer for json representations.
+    json-pretty-print = true
+
+    # Directory with html files. If file doesn't exist in directory it
+    # will be loaded from classpath "/html/".
+    html-file-resources = "src/main/resources/html"
+
+    # When more points in time series than this the result will automatically
+    # be sampled.
+    max-timeseries-points = 500
+
+    # When more points in span time series than this the result will automatically
+    # be sampled.
+    max-span-timeseries-points = 10000
+
+    # Default paging size when searching intervals
+    # (maximum returned number of instances)
+    paging-size = 100
+
+    # Default limit for max number of actors retrieved
+    # This will prevent the REST API from sending out > X actors (and swamp the client).
+    # It is possible to override this constant in runtime, i.e. the client
+    # can explicitly ask for more (all) actors available
+    default-limit = 50
+
+    # Anonymous actors are by default not included in metadata query results
+    include-anonymous-paths-in-metadata = on
+
+    # Temp actors are by default not included in metadata query results
+    # Note that the anonymous actors switch above must be on in order to see any temp actors
+    # (since temp actors consist of anonymous actors)
+    include-temp-paths-in-metadata = off
   }
 }
