Replaced atmos with activator in config files.

--- a/analytics/src/main/resources/reference.conf
+++ b/analytics/src/main/resources/reference.conf
@@ -1,8 +1,8 @@
 #######################################
-# Atmos Analyze Reference Config File #
+# Analyze Reference Config File #
 #######################################
 
-atmos {
+activator {
   analytics {
     # Delay for retry of incomplete spans, in milliseconds.
     retry-delay = 30 seconds
@@ -134,7 +134,7 @@ atmos {
     # The format is comma separated values "100, 200, 300", or width times number
     # of # buckets # "100x3", or a mix of both "20x4, 100, 200, 300, 700, 1000x4".
     # The boundaries can also be configured by span type, or user defined span name,
-    # e.g. atmos.storage-bucket-boundaries-micros.mailbox.
+    # e.g. activator.storage-bucket-boundaries-micros.mailbox.
     storage-bucket-boundaries-micros.default = "100x19"
     #storage-bucket-boundaries-micros.default = "100x9, 1000x9, 10000x9, 1000000x9"
     #storage-bucket-boundaries-micros.span1 = "100x9, 1000x9, 10000x9, 1000000x9"
@@ -191,7 +191,7 @@ atmos {
     # url should be the full websocket attach URL including query parameters
     manager = null
     # can also set the manager via environment variable
-    manager = ${?ATMOS_ANALYTICS_MANAGER}
+    manager = ${?ACTIVATOR_ANALYTICS_MANAGER}
     # "poll" or "websocket" to connect to manager
     manager-mode = "poll"
 
