Upgraded to Scala 2.11.1 and new trace-collect dependency

--- a/analytics/src/main/resources/reference.conf
+++ b/analytics/src/main/resources/reference.conf
@@ -230,3 +230,9 @@ activator {
     include-temp-paths-in-metadata = off
   }
 }
+
+# Necessaey to make tests run
+akka {
+  event-handlers = ["akka.event.Logging$DefaultLogger"]
+  loglevel = "INFO"
+}
